# Final-I2P2

./: .gitignore  CMakeLists.txt  README.md  debug.html  main.cpp  test.html
Enemy/: Boss.cpp  Boss.hpp  Enemy.cpp  Enemy.hpp  Knight.cpp  Knight.hpp
Engine/: AudioHelper.cpp  AudioHelper.hpp  Chat.cpp  Chat.hpp  GameEngine.cpp  GameEngine.hpp  IScene.hpp  Location.cpp  Location.hpp  ParallaxBackground.cpp  ParallaxBackground.hpp  ParallaxCloud.cpp  ParallaxCloud.hpp  Sheets.cpp  Sheets.hpp  map.cpp  map.hpp  utility.hpp
Player/: Player.cpp  Player.hpp  coin.cpp  coin.hpp
Resource/: light.frag  light.vert  map1.txt  map2.txt  map3.txt  map9.txt  shop.txt
Resource/audios/story/: cutscene-map-1.m4a  cutscene-map-4.m4a
Resource/chat/: chat1.txt
Resource/sha256/: sha256.cpp  sha256.h
Resource/shaders/: lighting.frag  passthrough.vert
Scene/: Boarding.cpp  Boarding.hpp  IntroScene.cpp  IntroScene.h  Login.cpp  Login.hpp  PlayScene.cpp  PlayScene.hpp  SettingsScene.cpp  SettingsScene.hpp  ShopScene.hpp  Signup.cpp  Signup.hpp  StageSelectScene.cpp  StartScene.cpp  StartScene.h  Story.cpp  Story.hpp  friendlist.cpp  friendlist.hpp  leaderboard.cpp  leaderboard.hpp  requests.cpp  requests.hpp  search.cpp  search.hpp
Shop/: Shop.cpp  Shop.hpp  item.cpp  item.hpp
UI/Component/: ImageButton.cpp  Slider.cpp  Slider.hpp
